# Stratum

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_shader.cmake  imgui.ini  main.cpp  make-deps.ps1  make-deps.sh  make-dxc.sh  setup-apt.sh  setup-yum.sh  setup.bat  setup.sh  stratum.cmake  stratum.rc  sync-deps.sh  test.spv  test.spv.json
Plugins/DicomVis/: CMakeLists.txt  DicomVis.cpp  ImageLoader.cpp  ImageLoader.hpp  RenderVolume.cpp  RenderVolume.hpp
Plugins/DicomVis/Shaders/: common.h  common.hlsli  precompute.hlsl  volume.hlsl
ShaderCompiler/: CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.hpp
src/: CMakeLists.txt  CompileShader.cmake  Config.cmake.in  Platform.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  Spline.hpp  Stratum.hpp  Types.hpp  binary_stream.hpp  byte_blob.hpp  byte_stream.hpp  dynamic_library.hpp  hash_combine.hpp  main.cpp  stratum.rc  tuplefier.hpp
src/Common/: CDialogEventHandler.cpp  CDialogEventHandler.hpp  Profiler.cpp  Profiler.hpp  binary_io.hpp  common.hpp  dynamic_library.hpp  forced-random-dither.hpp  hash.hpp  hlsl_compat.hpp  includes.hpp  locked_object.hpp  spline.hpp
src/Core/: AccelerationStructure.cpp  AccelerationStructure.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.hpp  EnginePlugin.hpp  Fence.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  Geometry.cpp  Geometry.hpp  GeometryData.hpp  Image.cpp  Image.hpp  InputState.hpp  Instance.cpp  Instance.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  PipelineState.cpp  PipelineState.hpp  PluginManager.cpp  PluginManager.hpp  Profiler.cpp  Profiler.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.hpp  Shader.cpp  (+11 more)
src/Core/Asset/: Asset.hpp  Font.cpp  Font.hpp  Mesh.cpp  Mesh.hpp  SpirvModuleGroup.hpp  Texture.cpp  Texture.hpp
src/Data/: AnimationCurve.hpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  Font.cpp  Font.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/HLSL/: ACES.hlsli  anim.hlsl  autodiff.hlsli  basic.hlsl  bdpt_connect.hlsli  bitfield.hlsli  bsdf.hlsli  combine.hlsl  common.hlsli  denoise_descriptors.hlsli  filter_type.hlsli  image_value.hlsli  light.hlsli  material.hlsli  math.hlsli  microfacet.hlsli  mip_cache.hlsli  path_state.hlsli  path_vertex.hlsli  pbr.hlsl  pbr.hlsli  pbr_raster.hlsl  pbr_rt.hlsl  pbr_rt.hlsli  pt_descriptors.hlsli  quatf.hlsli  ray_differential.hlsli  reservoir.hlsli  rng.hlsli  scene.hlsli  svgf_common.hlsli  tonemap.h  tonemap.hlsli  transform.hlsli  visibility_buffer.hlsli
src/HLSL/bsdfs/: emissive.hlsli  environment.hlsli  lambertian.hlsli  roughdielectric.hlsli  roughplastic.hlsli
src/HLSL/kernel/: alpha_to_roughness.hlsl  anim.hlsl  copy_vertices.hlsl  pt.hlsl  raster.hlsl  tonemap.hlsl
src/HLSL/kernels/: anim.hlsl  atrous.hlsl  copy_vertices.hlsl  dist2.hlsl  estimate_variance.hlsl  material_convert.hlsl  pt.hlsl  pt_descriptors.hlsli  temporal_accumulation.hlsl  tonemap.hlsl
src/HLSL/materials/: emissive.hlsli  environment.hlsli  het_volume.hlsli  lambertian.hlsli  roughdielectric.hlsli  roughplastic.hlsli  uber.hlsli  volume.hlsli
src/HLSL/renderers/: pssmlt.hlsl  pt.hlsl  smallpssmlt.h
src/HLSL/rt/: accumulate.hlsl  copy_vertices.hlsl  disney.hlsli  pathtrace.hlsl  ray_differential.hlsli  rtscene.hlsli  sampling.hlsli  tonemap.hlsl
src/Input/: InputDevice.hpp  InputManager.cpp  InputManager.hpp  MouseKeyboardInput.cpp  MouseKeyboardInput.hpp
src/Math/: Math.hpp  algebra.hpp  basic_hash.hpp  geometry.hpp  hash.hpp  tmat.hpp  tvec.hpp  tvec_impl.hpp  valrange.hpp
src/Node/: AccelerationStructure.cpp  AccelerationStructure.hpp  Application.cpp  Application.hpp  BDPT.cpp  BDPT.hpp  Denoiser.cpp  Denoiser.hpp  DynamicRenderPass.cpp  DynamicRenderPass.hpp  FlyCamera.cpp  FlyCamera.hpp  FullyFusedMLP.hpp  Gui.cpp  Gui.hpp  ImageComparer.cpp  ImageComparer.hpp  Inspector.cpp  Inspector.hpp  Material.hpp  NodeGraph.cpp  NodeGraph.hpp  PathTracer.cpp  PathTracer.hpp  RasterScene.cpp  RasterScene.hpp  RayTraceScene.cpp  RayTraceScene.hpp  Scene.cpp  Scene.hpp  VCM.cpp  VCM.hpp  XR.cpp  XR.hpp  XRScene.cpp  XRScene.hpp  load_gltf.cpp  load_mitsuba.cpp  load_obj.cpp  load_serialized.cpp
src/Node/io/: load_assimp.cpp  load_gltf.cpp  load_mitsuba.cpp  load_obj.cpp  load_serialized.cpp  load_vdb.cpp
src/Node/loaders/: load_assimp.cpp  load_gltf.cpp  load_mitsuba.cpp  load_obj.cpp  load_serialized.cpp  load_volumes.cpp
src/NodeGraph/: ImGuiInstance.cpp  ImGuiInstance.hpp  ImGuiNode.cpp  ImGuiNode.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  Material.cpp  Material.hpp  NodeGraph.hpp  RenderGraph.hpp  RenderNode.hpp  XR.cpp  XR.hpp  pbrRenderer.cpp  pbrRenderer.hpp
src/Plugins/DicomVis/: CMakeLists.txt  DicomVis.cpp  ImageLoader.cpp  ImageLoader.hpp  VolumeRenderer.cpp  VolumeRenderer.hpp  volume.hlsl
src/Scene/: AnimationCurve.hpp  Bone.hpp  Camera.cpp  Camera.hpp  GuiContext.cpp  GuiContext.hpp  ImGuiNode.cpp  ImGuiNode.hpp  Input.hpp  Light.hpp  Material.cpp  Material.hpp  MeshRenderer.hpp  Object.cpp  Object.hpp  ObjectBvh2.cpp  ObjectBvh2.hpp  PhysicsSim.cpp  PhysicsSim.hpp  PluginLoader.hpp  PluginModule.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderNode.hpp  Scene.cpp  Scene.hpp  TriangleBvh2.cpp  TriangleBvh2.hpp  XR.cpp  XR.hpp
src/Shaders/: anim.hlsl  average.hlsl  basic.hlsl  basic_raster.hlsl  bdpt.h  bitfield.h  color.hlsl  combine.hlsl  common.h  denoiser.h  dist2.h  environment.h  filter_type.h  image_compare.h  image_value.h  material.h  microfacet.h  pbr.hlsl  pointer.hlsl  quatf.h  reservoir.h  scene.h  shading_data.h  skinner.hlsl  skinning.hlsl  skybox.hlsl  tonemap.h  transform.h  ui.hlsl  vcm.h
src/Util/: Enums.hpp  Helpers.hpp  Math.hpp  Platform.hpp  Profiler.cpp  Profiler.hpp  StratumForward.hpp  StratumPlatform.hpp  Tokenizer.cpp  Tokenizer.hpp  Types.hpp  Util.hpp  binary_stream.hpp  byte_blob.hpp  byte_stream.hpp  hash_combine.hpp  tquat.hpp  tuplefier.hpp  tvec.hpp
(+343 files in other folders)
